server: show how the server was launched, tail its log, and make the actions buttons
Five things asked for after looking at it.

The Config tab now shows how the server was actually launched, from the server.json
written at spawn: the JVM, its options, the working directory and the classpath it
was handed, one entry per line. The classpath is the answer to "why is this server
behaving like a different version of bleep", which was otherwise only recoverable
by reading the daemon log. A server predating that file says so rather than showing
an empty section.

A Log tab tails the server's own log, coloured by level so a wall of log is
skimmable. Read from the end of the file rather than by loading it — these run to
tens of megabytes and this happens once a second — and re-read immediately when the
selection changes, so it never shows the previous server's log for a tick.

The actions are a row of buttons rather than a legend, on the raised surface so they
look pressable, and they are: clicking one dispatches the same Msg the key does.

Left and right move between tabs, wrapping in both directions, since left from the
first tab doing nothing is just a dead key.

A blank line above and below the content, which is most of what made it feel
cramped.

The click tests now scan for their targets instead of hard-coding coordinates —
adding that blank line broke every one of them, which is the wrong thing for a test
about "this is clickable" to be sensitive to.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>